# dairlib

./: .bazelrc  BUILD.bazel  Dockerfile  Spirit.cc  animate_spirit.cc  b_only_out.txt  b_only_out2.txt  b_only_out4.txt  behavior.h  behavior_configuration.h  bounding_gait_test.sh  createVideo.sh  ik_test.cc  log.txt  process_trajectory.cc  run_spirit_bound.cc  run_spirit_stand.cc  spiritTest.cc  spirit_jump.cc  spirit_jump.h  spirit_utils.cc  spirit_utils.h  test.pub
Spirit/: BUILD.bazel  RationalTest.cpp  rational.cpp  rational.h  run_spirit_best_stand.cc  run_spirit_jump.cc
examples/Spirit/: BUILD.bazel  Spirit.cc  Spirit.h  Spirit4Test.cc  Spirit4Test.h  SpiritTest2.cc  animate_spirit.cc  behavior.h  behavior_configuration.h  box_jump_config.yaml  config.yaml  ik_test.cc  parkour_3pronk_config.yaml  parkour_contact_helper.h  parkour_jump_config.yaml  process_trajectory.cc  run_spirit_bound.cc  run_spirit_box_jump.cc  run_spirit_jump.cc  run_spirit_optimal_stand.cc  run_spirit_parkour.cc  run_spirit_parkour_pronk.cc  run_spirit_squat.cc  run_spirit_vis.cc  spiritTest.cc  spirit_bound.cc  spirit_bound.h  spirit_box_jump.cc  spirit_box_jump.h  spirit_cor_spine_drake.urdf  spirit_gazebo_tbv.urdf  spirit_helper.h  spirit_jump.cc  spirit_jump.h  spirit_optimal_stand.cc  spirit_optimal_stand.h  spirit_parkour.cc  spirit_parkour.h  spirit_parkour_wall.cc  spirit_parkour_wall.h  (+8 more)
examples/Spirit/html/: animate__spirit_8h_source.html  annotated.html  classdairlib_1_1Behavior-members.html  classdairlib_1_1Behavior.html  classdairlib_1_1ModeSequenceHelper-members.html  classdairlib_1_1OptimalSpiritStand-members.html  classdairlib_1_1OptimalSpiritStand.html  classdairlib_1_1Spirit-members.html  classdairlib_1_1Spirit.html  classdairlib_1_1Spirit4Test-members.html  classdairlib_1_1SpiritBound-members.html  classdairlib_1_1SpiritBoxJump-members.html  classdairlib_1_1SpiritBoxJump.html  classdairlib_1_1SpiritJump-members.html  classdairlib_1_1SpiritJump.html  classdairlib_1_1SpiritParkourJump.html  classes.html  functions_func.html  hierarchy.html  spirit__jump_8h_source.html  spirit__optimal__stand_8h_source.html  structSurfaceConf-members.html  surface__conf_8h_source.html
examples/Spirit/html/search/: all_0.js  all_11.js  all_7.js  all_e.js  classes_2.js  functions_1.js  functions_2.js  functions_5.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_8.js  variables_a.js  variables_b.js
examples/Spirit/latex/: animate__spirit_8h_source.tex  annotated.tex  behavior_8h_source.tex  classdairlib_1_1JointWorkCost.eps  classdairlib_1_1JointWorkCost.tex  classdairlib_1_1Spirit.tex  classdairlib_1_1SpiritBound.tex  classdairlib_1_1SpiritParkourWallPronk.eps  classdairlib_1_1SpiritParkourWallPronk.tex  files.tex  refman.tex  spirit__bound_8h_source.tex  spirit__box__jump_8h_source.tex  spirit__optimal__stand_8h_source.tex  spirit__parkour__wall_8h_source.tex  structSurfaceConf.tex
examples/Spirit/parkour_test/: run_spirit_parkour_pronk.cc.cpp  spirit_parkour_v1.cc  spirit_parkour_v2.cc
examples/Spirit/saved_trajectories/: bound_100cm  bound_100cmlow_mu  bound_100cmmin_work  boxjump_iterativeBox45_0  in_place_bound  jump_100cm  jump_100cm_hq  jump_100cm_hq_work_option3  simple_boxjump  simple_jump
examples/Spirit/saved_trajectories/bound_test1/: bound_100cm  bound_100cm_low_mu  bound_100cm_min_work  expanded_config.yaml  in_place_bound
examples/Spirit/saved_trajectories/box_jump_test1/: boxjump_iterativeBox45_0  boxjump_iterativeBox45_0_1  boxjump_iterativeBox45_1  boxjump_iterativeBox45_1_0  config.yaml  expanded_config.yaml  simple_boxjump
examples/Spirit/saved_trajectories/jump_test1/: expanded_config.yaml  jump_100cm  jump_100cm_hq  jump_100cm_hq_work_option3  simple_jump
examples/Spirit/saved_trajectories/parkour/: simple_jump  simple_parkour_2_1
examples/Spirit/saved_trajectories/parkour_3pronk_test1/: expanded_config.yaml  simple_parkour_2_1  simple_parkour_2_3  simple_parkour_2_5  simple_parkour_2_6  simple_parkour_2_7
examples/Spirit/saved_trajectories/parkour_jump_test1/: config.yaml  expanded_config.yaml  simple_parkour_2_1  simple_parkour_2_2  simple_parkour_2_3  simple_parkour_2_4  simple_parkour_2_5  simple_parkour_2_6  simple_parkour_2_7
examples/Spirit/saved_trajectories/parkour_wall_jump_test1/: config.yaml  expanded_config.yaml  simple_parkour_2_10  simple_parkour_2_12  simple_parkour_2_2  simple_parkour_2_6  simple_parkour_2_7
examples/Spirit/saved_trajectories/parkour_wall_jump_test2/: config.yaml  simple_parkour_2_10  simple_parkour_2_11  simple_parkour_2_2  simple_parkour_2_4  simple_parkour_2_6  simple_parkour_2_7
examples/Spirit/saved_trajectories/parkour_wall_jump_test3/: config.yaml  expanded_config.yaml  simple_parkour_2_1  simple_parkour_2_11  simple_parkour_2_2  simple_parkour_2_3  simple_parkour_2_4  simple_parkour_2_5  simple_parkour_2_6  simple_parkour_2_7  simple_parkour_2_8
examples/Spirit/saved_trajectories/stand_trajectories/: optimalStand_h_23cm_r_0deg_p_0deg  optimalStand_h_23cm_r_0deg_p_11deg  optimalStand_h_23cm_r_n5deg_p_0deg
examples/Spirit/xacros/: spirit_cor_spine_drake.urdf.xacro  spirit_sag_cor_spine_drake.urdf.xacro  spirit_sag_spine_drake.urdf.xacro  spirit_spine_drake.urdf.xacro  spirit_with_spine_drake.urdf  spirit_with_spine_drake.urdf.xacro
examples/Spirit/yaml_configs/: bound_config.yaml  box_jump_config.yaml  config.yaml  parkour_wall_config.yaml
examples/jumping/: BUILD.bazel  center_of_mass_generator.cpp  com_traj.cc  com_traj.h  com_traj_generator.cc  five_link_biped.urdf  five_link_biped_dircon.cc  flight_foot_traj.cc  flight_foot_traj.h  jumping_fsm.cc  jumping_fsm.h  jumping_traj.cc  jumping_traj.cpp  jumping_traj.h  osc_jumping_controller.cc  planar_walker_dircon.cc  rabbit_sim.cc  rabbit_visualizer.cc  traj_logger.h
lcm/: dircon_saved_trajectory.cc  dircon_saved_trajectory.h  lcm_trajectory.cc  (+2 more)
systems/controllers/kinematic_centroidal_mpc/: BUILD.bazel  kinematic_centroidal_constraints.cc  kinematic_centroidal_constraints.h  kinematic_centroidal_mpc.cc  kinematic_centroidal_mpc.h
(+3582 files in other folders)
