# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "animate_spirit",
    srcs = ["animate_spirit.cc"],
    hdrs = ["animate_spirit.h"],
    deps = [
        "//common",
        "//multibody:visualization_utils",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_utils",
    srcs = ["spirit_utils.cc"],
    hdrs = ["spirit_utils.h"],
    deps = [
        "//common",
        "//multibody/kinematic",
        "//multibody:visualization_utils",
        "//solvers:nonlinear_cost",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_optimal_stand",
    srcs = ["spirit_optimal_stand.cc"],
    hdrs = ["spirit_optimal_stand.h"],
    deps = [
        ":spirit_utils",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)


cc_library(
    name = "spirit_jump",
    srcs = ["spirit_jump.cc"],
    hdrs = ["spirit_jump.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        ":spirit_behavior",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_box_jump",
    srcs = ["spirit_box_jump.cc"],
    hdrs = ["spirit_box_jump.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        ":spirit_behavior",
        ":spirit_optimal_stand",
        ":surface_conf",
        "//systems/trajectory_optimization/dircon",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_bound",
    srcs = ["spirit_bound.cc"],
    hdrs = ["spirit_bound.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        ":spirit_behavior",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_parkour_jump",
    srcs = ["spirit_parkour.cc"],
    hdrs = ["spirit_parkour.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        ":spirit_behavior",
        ":spirit_optimal_stand",
        ":surface_conf",
        "//systems/trajectory_optimization/dircon",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "spirit_parkour_wall_jump",
    srcs = ["spirit_parkour_wall.cc"],
    hdrs = ["spirit_parkour_wall.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        ":spirit_behavior",
        ":spirit_optimal_stand",
        ":surface_conf",
        "//systems/trajectory_optimization/dircon",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "Spirit",
    linkopts =["-lstdc++fs"],
    srcs = ["Spirit.cc"],
    hdrs = ["Spirit.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_jump",
        ":spirit_bound",
        ":spirit_box_jump",
        ":spirit_parkour_jump",
        ":spirit_parkour_wall_jump",
        ":spirit_utils",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "Spirit4Test",
    linkopts =["-lstdc++fs"],
    srcs = ["Spirit4Test.cc"],
    hdrs = ["Spirit4Test.h"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_box_jump",
        ":spirit_utils",
        ":surface_conf",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "surface_conf",
    hdrs = ["surface_conf.h"],
)

cc_library(
    name = "spirit_behavior",
    hdrs = ["behavior.h"],
    deps = [":spirit_utils",
            ":surface_conf",],
)

cc_binary(
    name = "spirit_test",
    srcs = ["spiritTest.cc"],
    deps = [
        ":animate_spirit",
        ":spirit_jump",
        ":spirit_bound",
        ":spirit_parkour_wall_jump",
        ":Spirit",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)


cc_binary(
    name = "spirit_test2",
    srcs = ["SpiritTest2.cc"],
    deps = [
        ":animate_spirit",
        ":spirit_jump",
        ":spirit_bound",
        ":Spirit",
        ":Spirit4Test",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_vis",
    srcs = ["run_spirit_vis.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        "//common",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "process_trajectory",
    srcs = ["process_trajectory.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "ik_test",
    srcs = ["ik_test.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        "//common",
        "//lcm:dircon_trajectory_saver",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_stand",
    srcs = ["run_spirit_stand.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        ":spirit_utils",
        "//common",
        "//multibody/kinematic",
        "//systems/primitives",
        "//systems/trajectory_optimization/dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)



cc_library(
    name = "urdf",
    data = ["spirit_drake.urdf"],
)

# package(default_visibility = ["//visibility:public"])

# load(
#     "@drake//tools/skylark:drake_cc.bzl",
#     "drake_cc_binary",
# )
# load("//tools/install:install_data.bzl", "install_data")
# ​
# drake_cc_binary(
#     name = "run_spirit_vis",
#     srcs = [
#         "run_spirit_vis.cc",
#     ],
#     data = [
#         ":models",
#         "//tools:drake_visualizer",
#         "spirit_drake.urdf"
#     ],
#     deps = [
#         "//common",
#         "//systems/primitives",
#         "@drake//:drake_shared_library",
#         "@gflags",
#         # "//common:find_resource",
#         # "//common:text_logging_gflags",
#         "//geometry:geometry_visualization",
#         "//lcm",
#         "//multibody/parsing",
#         "//multibody/plant",
#         "//systems/analysis",
#         "//systems/framework",
#         "@sdformat",
#     ],
# )
# ​
# install_data()
