# -*- mode: python -*-
# vi: set ft=python :

cc_binary(
    name = "five_link_biped_dircon",
    srcs = ["five_link_biped_dircon.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//systems/trajectory_optimization:dircon",
        "//common",
        ":traj_logger",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)


cc_library(
    name = "traj_logger",
    srcs = ["traj_logger.h"],
    deps = [
        "//systems/primitives",
        "//systems/goldilocks_models",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)