# -*- mode: python -*-
# vi: set ft=python :


cc_library(
    name = "traj_logger",
    srcs = ["traj_logger.h"],
    deps = [
        "//systems/primitives",
        "//systems/goldilocks_models",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "com_traj",
    srcs = ["com_traj.cc"],
    hdrs = ["com_traj.h"],
    deps = [
        "//systems/controllers:control_utils",
        "//attic/multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "flight_foot_traj",
    srcs = ["flight_foot_traj.cc"],
    hdrs = ["flight_foot_traj.h"],
    deps = [
        "//systems/controllers:control_utils",
        "//attic/multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "jumping_fsm",
    srcs = ["jumping_fsm.cc"],
    hdrs = ["jumping_fsm.h"],
    deps = [
        "//systems/controllers:control_utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "five_link_biped_dircon",
    srcs = ["five_link_biped_dircon.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//systems/trajectory_optimization:dircon",
        "//common",
        ":traj_logger",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "osc_jumping_controller",
    srcs = ["osc_jumping_controller.cc"],
    deps = [
        "//systems/controllers/osc:operational_space_control",
        "//systems/controllers/osc:osc_tracking_data",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "//attic/multibody:utils",
        ":com_traj",
        ":flight_foot_traj",
        ":jumping_fsm",
        "//common",
        ":traj_logger",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "rabbit_simulator",
    srcs = ["rabbit_sim.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//common",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "rabbit_visualizer",
    srcs = ["rabbit_visualizer.cc"],
    data = ["five_link_biped.urdf"],
    deps = [
        "//common",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

