cc_library(
    name = "kinematic_centroidal_mpc",
    srcs = ["kinematic_centroidal_mpc.cc",
            "kinematic_centroidal_constraints.cc"],
    hdrs = ["kinematic_centroidal_mpc.h",
            "kinematic_centroidal_constraints.h"],
    deps = [
        "//geometry:convex_foothold",
        "//solvers:constraints",
        "//multibody/kinematic:kinematic",
        "@drake//:drake_shared_library",
    ],
)
